# m3_model_power

./: .gitignore  README.md  start.py
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/capabilities/: __init__.py  chat.py  files.py  image.py  models.py  music.py  video.py  voice.py
backend/app/minimax/: client.py
backend/app/minimax_core/: __init__.py  invoker.py
backend/app/minimax_core/clients/: __init__.py  anthropic.py  base.py  files.py  native.py  openai.py
backend/app/minimax_core/contracts/: __init__.py  provider_payload.py  response.py  specs.py  verification.py
backend/app/minimax_core/descriptions/: capability_descriptions.json  loader.py
backend/app/minimax_core/guards/: __init__.py  redaction.py  risk_gate.py
backend/app/minimax_core/official_docs/: official_docs_snapshot.json
backend/app/minimax_core/profiles/: __init__.py  capability_profiles.json  loader.py
backend/app/minimax_core/registry/: __init__.py  capability_registry.py  loader.py  model_registry.py
backend/app/registry/: __init__.py  handlers.py  loader.py
backend/app/routers/: descriptions.py  diagnostics.py  health.py  history.py  invoke.py  profiles.py  registry.py  risk_check.py  runner.py  scenarios.py  stream.py  upload.py  verification.py  workflows.py  ws.py
backend/config/: capabilities.yaml  models.yaml
backend/scripts/: generate_full_capability_matrix.py  probe_model_level_support.py  probe_tts_ws.py  rebuild_verification_index.py  report_scope_gap.py  sync_minimax_models.py  verify_minimax_capabilities.py
(+134 files in other folders)
