[project]
name = "minimax-workbench-backend"
version = "0.1.0"
description = "MiniMax 能力聚合工作台 - 后端"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "websockets>=13",
    "pyyaml>=6.0",
]

[tool.uv]
dev-dependencies = ["mypy>=1.13", "ruff>=0.7"]

[tool.setuptools]
packages = ["app"]
